--- a/src/app/output.css
+++ b/src/app/output.css
@@ -534,40 +534,92 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
 
-.right-20 {
-  right: 5rem;
+.relative {
+  position: relative;
 }
 
 .right-4 {
   right: 1rem;
 }
 
-.top-\[30px\] {
-  top: 30px;
-}
-
 .top-\[126px\] {
   top: 126px;
 }
 
-.left-\[673px\] {
-  left: 673px;
+.right-\[18px\] {
+  right: 18px;
 }
 
-.bottom-\[0px\] {
-  bottom: 0px;
+.right-\[180px\] {
+  right: 180px;
 }
 
-.right-\[50px\] {
-  right: 50px;
+.right-0 {
+  right: 0px;
 }
 
-.bottom-\[126px\] {
-  bottom: 126px;
+.left-\[140px\] {
+  left: 140px;
+}
+
+.top-\[18px\] {
+  top: 18px;
+}
+
+.top-\[35px\] {
+  top: 35px;
+}
+
+.top-\[-81\.07px\] {
+  top: -81.07px;
+}
+
+.top-\[0px\] {
+  top: 0px;
+}
+
+.top-\[px\] {
+  top: px;
+}
+
+.top-\[-10px\] {
+  top: -10px;
+}
+
+.top-\[-87\.07px\] {
+  top: -87.07px;
+}
+
+.top-\[-45px\] {
+  top: -45px;
+}
+
+.top-\[-35px\] {
+  top: -35px;
+}
+
+.top-\[-2px\] {
+  top: -2px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.left-1\/2 {
+  left: 50%;
 }
 
 .z-\[-1\] {
@@ -583,6 +635,14 @@ video {
   margin-bottom: 22px;
 }
 
+.mb-\[40px\] {
+  margin-bottom: 40px;
+}
+
+.mt-\[-30px\] {
+  margin-top: -30px;
+}
+
 .mt-\[10px\] {
   margin-top: 10px;
 }
@@ -591,16 +651,36 @@ video {
   margin-top: 19px;
 }
 
-.mt-\[35px\] {
-  margin-top: 35px;
-}
-
 .mt-\[22px\] {
   margin-top: 22px;
 }
 
-.mb-\[40px\] {
-  margin-bottom: 40px;
+.mt-\[35px\] {
+  margin-top: 35px;
+}
+
+.mt-\[-46px\] {
+  margin-top: -46px;
+}
+
+.mt-\[-81px\] {
+  margin-top: -81px;
+}
+
+.mt-\[-81\.07px\] {
+  margin-top: -81.07px;
+}
+
+.mt-\[-86px\] {
+  margin-top: -86px;
+}
+
+.mt-\[18px\] {
+  margin-top: 18px;
+}
+
+.mt-0 {
+  margin-top: 0px;
 }
 
 .block {
@@ -639,8 +719,22 @@ video {
   width: 100%;
 }
 
+.w-\[100vw\] {
+  width: 100vw;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-col {
@@ -685,10 +779,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(10px * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(10px * var(--tw-space-y-reverse));
-}
-
-.overflow-auto {
-  overflow: auto;
 }
 
 .scroll-smooth {
@@ -736,11 +826,6 @@ video {
 .py-\[20px\] {
   padding-top: 20px;
   padding-bottom: 20px;
-}
-
-.py-\[40px\] {
-  padding-top: 40px;
-  padding-bottom: 40px;
 }
 
 .pb-\[40px\] {
@@ -880,28 +965,28 @@ body {
     position: absolute;
   }
 
+  .sm\:relative {
+    position: relative;
+  }
+
   .sm\:right-\[50px\] {
     right: 50px;
   }
 
-  .sm\:top-\[126px\] {
-    top: 126px;
-  }
-
-  .sm\:z-\[-1\] {
-    z-index: -1;
+  .sm\:top-\[35px\] {
+    top: 35px;
   }
 
   .sm\:mb-\[16px\] {
     margin-bottom: 16px;
   }
 
-  .sm\:mt-\[22px\] {
-    margin-top: 22px;
-  }
-
   .sm\:mt-\[57px\] {
     margin-top: 57px;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
   }
 
   .sm\:flex {
@@ -914,10 +999,6 @@ body {
 
   .sm\:h-\[679px\] {
     height: 679px;
-  }
-
-  .sm\:h-\[100vh\] {
-    height: 100vh;
   }
 
   .sm\:w-\[313px\] {
