--- a/src/app/output.css
+++ b/src/app/output.css
@@ -534,101 +534,51 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
-}
-
-.relative {
-  position: relative;
 }
 
 .right-4 {
   right: 1rem;
 }
 
-.top-\[126px\] {
-  top: 126px;
-}
-
-.right-\[18px\] {
-  right: 18px;
-}
-
-.right-\[180px\] {
-  right: 180px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.left-\[140px\] {
-  left: 140px;
-}
-
-.top-\[18px\] {
-  top: 18px;
-}
-
-.top-\[35px\] {
-  top: 35px;
-}
-
-.top-\[-81\.07px\] {
-  top: -81.07px;
-}
-
-.top-\[0px\] {
-  top: 0px;
-}
-
-.top-\[px\] {
-  top: px;
-}
-
-.top-\[-10px\] {
-  top: -10px;
-}
-
-.top-\[-87\.07px\] {
-  top: -87.07px;
-}
-
-.top-\[-45px\] {
-  top: -45px;
-}
-
-.top-\[-35px\] {
-  top: -35px;
-}
-
-.top-\[-2px\] {
-  top: -2px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
-.left-1\/2 {
-  left: 50%;
-}
-
 .z-\[-1\] {
   z-index: -1;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.my-\[-60px\] {
+  margin-top: -60px;
+  margin-bottom: -60px;
+}
+
+.my-\[-70px\] {
+  margin-top: -70px;
+  margin-bottom: -70px;
+}
+
+.my-\[0px\] {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.mx-\[54\.5px\] {
+  margin-left: 54.5px;
+  margin-right: 54.5px;
+}
+
+.mx-\[64\.5px\] {
+  margin-left: 64.5px;
+  margin-right: 64.5px;
+}
+
+.mx-\[44\.5px\] {
+  margin-left: 44.5px;
+  margin-right: 44.5px;
+}
+
+.mx-\[34\.5px\] {
+  margin-left: 34.5px;
+  margin-right: 34.5px;
 }
 
 .mb-\[22px\] {
@@ -639,12 +589,12 @@ video {
   margin-bottom: 40px;
 }
 
-.mt-\[-30px\] {
-  margin-top: -30px;
-}
-
 .mt-\[10px\] {
   margin-top: 10px;
+}
+
+.mt-\[18px\] {
+  margin-top: 18px;
 }
 
 .mt-\[19px\] {
@@ -657,30 +607,6 @@ video {
 
 .mt-\[35px\] {
   margin-top: 35px;
-}
-
-.mt-\[-46px\] {
-  margin-top: -46px;
-}
-
-.mt-\[-81px\] {
-  margin-top: -81px;
-}
-
-.mt-\[-81\.07px\] {
-  margin-top: -81.07px;
-}
-
-.mt-\[-86px\] {
-  margin-top: -86px;
-}
-
-.mt-\[18px\] {
-  margin-top: 18px;
-}
-
-.mt-0 {
-  margin-top: 0px;
 }
 
 .block {
@@ -699,42 +625,32 @@ video {
   height: 2rem;
 }
 
-.h-\[46\.07px\] {
-  height: 46.07px;
+.h-\[44\.98px\] {
+  height: 44.98px;
 }
 
-.h-\[74px\] {
-  height: 74px;
+.h-\[72\.25px\] {
+  height: 72.25px;
 }
 
 .w-8 {
   width: 2rem;
 }
 
-.w-\[107\.78px\] {
-  width: 107.78px;
+.w-\[105\.38px\] {
+  width: 105.38px;
+}
+
+.w-\[169\.27px\] {
+  width: 169.27px;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-\[100vw\] {
-  width: 100vw;
-}
-
 .flex-1 {
   flex: 1 1 0%;
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-col {
@@ -828,6 +744,11 @@ video {
   padding-bottom: 20px;
 }
 
+.py-\[40px\] {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 .pb-\[40px\] {
   padding-bottom: 40px;
 }
@@ -874,6 +795,14 @@ video {
   line-height: 1.25rem;
 }
 
+.text-\[22px\] {
+  font-size: 22px;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .font-\[18px\] {
   font-weight: 18px;
 }
@@ -890,6 +819,10 @@ video {
   font-weight: 600;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .leading-tight {
   line-height: 1.25;
 }
@@ -902,6 +835,11 @@ video {
 .text-secondary {
   --tw-text-opacity: 1;
   color: rgb(16 203 224 / var(--tw-text-opacity));
+}
+
+.text-semi_gray {
+  --tw-text-opacity: 1;
+  color: rgb(169 169 169 / var(--tw-text-opacity));
 }
 
 .text-semi_secondary {
@@ -955,26 +893,21 @@ body {
   box-shadow: 0 0 15px var(--primary);
 }
 
-.hover\:text-pink-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(244 114 182 / var(--tw-text-opacity));
-}
-
 @media (min-width: 640px) {
   .sm\:absolute {
     position: absolute;
   }
 
-  .sm\:relative {
-    position: relative;
+  .sm\:bottom-\[0px\] {
+    bottom: 0px;
   }
 
   .sm\:right-\[50px\] {
     right: 50px;
   }
 
-  .sm\:top-\[35px\] {
-    top: 35px;
+  .sm\:top-\[126px\] {
+    top: 126px;
   }
 
   .sm\:mb-\[16px\] {
@@ -983,18 +916,6 @@ body {
 
   .sm\:mt-\[57px\] {
     margin-top: 57px;
-  }
-
-  .sm\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .sm\:flex {
-    display: flex;
-  }
-
-  .sm\:hidden {
-    display: none;
   }
 
   .sm\:h-\[679px\] {
@@ -1013,12 +934,13 @@ body {
     width: 666px;
   }
 
-  .sm\:flex-row {
-    flex-direction: row;
-  }
-
   .sm\:flex-col-reverse {
     flex-direction: column-reverse;
+  }
+
+  .sm\:object-cover {
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 
   .sm\:py-\[10px\] {
@@ -1044,15 +966,397 @@ body {
   .md\:block {
     display: block;
   }
-
-  .md\:max-w-\[173\.12px\] {
-    max-width: 173.12px;
-  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:absolute {
+    position: absolute;
+  }
+
+  .xl\:right-0 {
+    right: 0px;
+  }
+
+  .xl\:right-\[-110px\] {
+    right: -110px;
+  }
+
+  .xl\:right-\[110px\] {
+    right: 110px;
+  }
+
+  .xl\:right-\[-10px\] {
+    right: -10px;
+  }
+
+  .xl\:top-0 {
+    top: 0px;
+  }
+
+  .xl\:top-80 {
+    top: 20rem;
+  }
+
+  .xl\:top-\[80px\] {
+    top: 80px;
+  }
+
+  .xl\:top-\[126px\] {
+    top: 126px;
+  }
+
+  .xl\:bottom-\[0px\] {
+    bottom: 0px;
+  }
+
+  .xl\:top-\[120px\] {
+    top: 120px;
+  }
+
+  .xl\:top-\[136px\] {
+    top: 136px;
+  }
+
+  .xl\:top-\[156px\] {
+    top: 156px;
+  }
+
+  .xl\:right-\[10px\] {
+    right: 10px;
+  }
+
+  .xl\:right-\[0px\] {
+    right: 0px;
+  }
+
+  .xl\:right-\[150px\] {
+    right: 150px;
+  }
+
+  .xl\:right-\[50px\] {
+    right: 50px;
+  }
+
+  .xl\:right-\[60px\] {
+    right: 60px;
+  }
+
+  .xl\:right-\[70px\] {
+    right: 70px;
+  }
+
+  .xl\:top-\[226px\] {
+    top: 226px;
+  }
+
+  .xl\:top-\[176px\] {
+    top: 176px;
+  }
+
+  .xl\:top-\[60px\] {
+    top: 60px;
+  }
+
+  .xl\:top-\[160px\] {
+    top: 160px;
+  }
+
+  .xl\:top-\[170px\] {
+    top: 170px;
+  }
+
+  .xl\:top-\[180px\] {
+    top: 180px;
+  }
+
+  .xl\:top-\[200px\] {
+    top: 200px;
+  }
+
+  .xl\:right-\[40px\] {
+    right: 40px;
+  }
+
+  .xl\:right-\[20px\] {
+    right: 20px;
+  }
+
+  .xl\:z-\[-1\] {
+    z-index: -1;
+  }
+
+  .xl\:my-\[-60px\] {
+    margin-top: -60px;
+    margin-bottom: -60px;
+  }
+
+  .xl\:my-\[30px\] {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .xl\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .xl\:mt-\[-60px\] {
+    margin-top: -60px;
+  }
+
+  .xl\:mt-\[60px\] {
+    margin-top: 60px;
+  }
+
+  .xl\:mb-\[16px\] {
+    margin-bottom: 16px;
+  }
+
+  .xl\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .xl\:mt-\[12px\] {
+    margin-top: 12px;
+  }
+
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
+  .xl\:h-\[679px\] {
+    height: 679px;
+  }
+
+  .xl\:h-full {
+    height: 100%;
+  }
+
+  .xl\:h-auto {
+    height: auto;
+  }
+
+  .xl\:h-\[579px\] {
+    height: 579px;
+  }
+
+  .xl\:h-\[779px\] {
+    height: 779px;
+  }
+
+  .xl\:h-\[609px\] {
+    height: 609px;
+  }
+
+  .xl\:h-\[709px\] {
+    height: 709px;
+  }
+
+  .xl\:h-\[879px\] {
+    height: 879px;
+  }
+
+  .xl\:h-\[690px\] {
+    height: 690px;
+  }
+
+  .xl\:h-\[790px\] {
+    height: 790px;
+  }
+
+  .xl\:h-\[700px\] {
+    height: 700px;
+  }
+
+  .xl\:h-\[720px\] {
+    height: 720px;
+  }
+
+  .xl\:h-\[740px\] {
+    height: 740px;
+  }
+
+  .xl\:h-\[730px\] {
+    height: 730px;
+  }
+
+  .xl\:w-\[666px\] {
+    width: 666px;
+  }
+
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:w-\[766px\] {
+    width: 766px;
+  }
+
+  .xl\:w-\[866px\] {
+    width: 866px;
+  }
+
+  .xl\:w-\[966px\] {
+    width: 966px;
+  }
+
+  .xl\:w-\[846px\] {
+    width: 846px;
+  }
+
+  .xl\:w-\[826px\] {
+    width: 826px;
+  }
+
+  .xl\:w-\[516px\] {
+    width: 516px;
+  }
+
+  .xl\:w-\[616px\] {
+    width: 616px;
+  }
+
+  .xl\:w-\[600px\] {
+    width: 600px;
+  }
+
+  .xl\:w-\[590px\] {
+    width: 590px;
+  }
+
+  .xl\:w-\[580px\] {
+    width: 580px;
+  }
+
+  .xl\:w-\[570px\] {
+    width: 570px;
+  }
+
+  .xl\:w-\[313px\] {
+    width: 313px;
+  }
+
+  .xl\:w-\[776px\] {
+    width: 776px;
+  }
+
+  .xl\:w-\[575px\] {
+    width: 575px;
+  }
+
+  .xl\:w-\[572px\] {
+    width: 572px;
+  }
+
+  .xl\:w-\[800px\] {
+    width: 800px;
+  }
+
+  .xl\:w-\[820px\] {
+    width: 820px;
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:flex-col-reverse {
+    flex-direction: column-reverse;
+  }
+
+  .xl\:overflow-hidden {
+    overflow: hidden;
+  }
+
+  .xl\:object-cover {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
+  .xl\:object-fill {
+    -o-object-fit: fill;
+       object-fit: fill;
+  }
+
+  .xl\:object-scale-down {
+    -o-object-fit: scale-down;
+       object-fit: scale-down;
+  }
+
   .xl\:px-\[211px\] {
     padding-left: 211px;
     padding-right: 211px;
+  }
+
+  .xl\:py-\[20px\] {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .xl\:py-\[-20px\] {
+    padding-top: -20px;
+    padding-bottom: -20px;
+  }
+
+  .xl\:py-\[-50px\] {
+    padding-top: -50px;
+    padding-bottom: -50px;
+  }
+
+  .xl\:py-\[30px\] {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .xl\:py-\[40px\] {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .xl\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .xl\:py-\[0px\] {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .xl\:py-\[10px\] {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .xl\:pt-\[30px\] {
+    padding-top: 30px;
+  }
+
+  .xl\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .xl\:pb-\[0px\] {
+    padding-bottom: 0px;
+  }
+
+  .xl\:text-left {
+    text-align: left;
+  }
+
+  .xl\:text-\[35px\] {
+    font-size: 35px;
+  }
+
+  .xl\:text-\[22px\] {
+    font-size: 22px;
   }
 }
