set font urbanist and figtree

--- a/src/app/output.css
+++ b/src/app/output.css
@@ -546,47 +546,18 @@ video {
   z-index: -1;
 }
 
-.my-\[-60px\] {
-  margin-top: -60px;
-  margin-bottom: -60px;
-}
-
-.my-\[-70px\] {
-  margin-top: -70px;
-  margin-bottom: -70px;
-}
-
-.my-\[0px\] {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.mx-\[54\.5px\] {
-  margin-left: 54.5px;
-  margin-right: 54.5px;
-}
-
-.mx-\[64\.5px\] {
-  margin-left: 64.5px;
-  margin-right: 64.5px;
-}
-
-.mx-\[44\.5px\] {
-  margin-left: 44.5px;
-  margin-right: 44.5px;
-}
-
 .mx-\[34\.5px\] {
   margin-left: 34.5px;
   margin-right: 34.5px;
 }
 
-.mb-\[22px\] {
-  margin-bottom: 22px;
+.my-\[-60px\] {
+  margin-top: -60px;
+  margin-bottom: -60px;
 }
 
-.mb-\[40px\] {
-  margin-bottom: 40px;
+.mb-\[22px\] {
+  margin-bottom: 22px;
 }
 
 .mt-\[10px\] {
@@ -773,6 +744,10 @@ video {
   font-size: 12px;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .text-\[16px\] {
   font-size: 16px;
 }
@@ -790,19 +765,6 @@ video {
   line-height: 1.5rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-\[22px\] {
-  font-size: 22px;
-}
-
-.text-\[14px\] {
-  font-size: 14px;
-}
-
 .font-\[18px\] {
   font-weight: 18px;
 }
@@ -815,12 +777,12 @@ video {
   font-weight: 800;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-medium {
   font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-tight {
@@ -864,6 +826,8 @@ video {
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-urbanist: "Urbanist", sans-serif;
+  --font-figtree: "Figtree", sans-serif;
 }
 
 @theme inline {
@@ -880,6 +844,8 @@ video {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --font-urbanist: "Urbanist", sans-serif;
+    --font-figtree: "Figtree", sans-serif;
   }
 }
 
@@ -887,6 +853,14 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.font-urbanist {
+  font-family: var(--font-urbanist);
+}
+
+.font-figtree {
+  font-family: var(--font-figtree);
 }
 
 .glow-button {
@@ -910,10 +884,6 @@ body {
     top: 126px;
   }
 
-  .sm\:mb-\[16px\] {
-    margin-bottom: 16px;
-  }
-
   .sm\:mt-\[57px\] {
     margin-top: 57px;
   }
@@ -922,49 +892,13 @@ body {
     height: 679px;
   }
 
-  .sm\:w-\[313px\] {
-    width: 313px;
-  }
-
-  .sm\:w-\[516px\] {
-    width: 516px;
-  }
-
   .sm\:w-\[666px\] {
     width: 666px;
-  }
-
-  .sm\:flex-col-reverse {
-    flex-direction: column-reverse;
   }
 
   .sm\:object-cover {
     -o-object-fit: cover;
        object-fit: cover;
-  }
-
-  .sm\:py-\[10px\] {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-
-  .sm\:py-\[30px\] {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-
-  .sm\:text-left {
-    text-align: left;
-  }
-
-  .sm\:text-\[35px\] {
-    font-size: 35px;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:block {
-    display: block;
   }
 }
 
@@ -973,126 +907,8 @@ body {
     position: absolute;
   }
 
-  .xl\:right-0 {
-    right: 0px;
-  }
-
-  .xl\:right-\[-110px\] {
-    right: -110px;
-  }
-
-  .xl\:right-\[110px\] {
-    right: 110px;
-  }
-
-  .xl\:right-\[-10px\] {
-    right: -10px;
-  }
-
-  .xl\:top-0 {
-    top: 0px;
-  }
-
-  .xl\:top-80 {
-    top: 20rem;
-  }
-
-  .xl\:top-\[80px\] {
-    top: 80px;
-  }
-
-  .xl\:top-\[126px\] {
-    top: 126px;
-  }
-
-  .xl\:bottom-\[0px\] {
-    bottom: 0px;
-  }
-
-  .xl\:top-\[120px\] {
-    top: 120px;
-  }
-
-  .xl\:top-\[136px\] {
-    top: 136px;
-  }
-
-  .xl\:top-\[156px\] {
-    top: 156px;
-  }
-
-  .xl\:right-\[10px\] {
-    right: 10px;
-  }
-
-  .xl\:right-\[0px\] {
-    right: 0px;
-  }
-
-  .xl\:right-\[150px\] {
-    right: 150px;
-  }
-
-  .xl\:right-\[50px\] {
-    right: 50px;
-  }
-
-  .xl\:right-\[60px\] {
-    right: 60px;
-  }
-
-  .xl\:right-\[70px\] {
-    right: 70px;
-  }
-
-  .xl\:top-\[226px\] {
-    top: 226px;
-  }
-
-  .xl\:top-\[176px\] {
-    top: 176px;
-  }
-
-  .xl\:top-\[60px\] {
-    top: 60px;
-  }
-
-  .xl\:top-\[160px\] {
-    top: 160px;
-  }
-
-  .xl\:top-\[170px\] {
-    top: 170px;
-  }
-
-  .xl\:top-\[180px\] {
-    top: 180px;
-  }
-
-  .xl\:top-\[200px\] {
-    top: 200px;
-  }
-
-  .xl\:right-\[40px\] {
-    right: 40px;
-  }
-
   .xl\:right-\[20px\] {
     right: 20px;
-  }
-
-  .xl\:z-\[-1\] {
-    z-index: -1;
-  }
-
-  .xl\:my-\[-60px\] {
-    margin-top: -60px;
-    margin-bottom: -60px;
-  }
-
-  .xl\:my-\[30px\] {
-    margin-top: 30px;
-    margin-bottom: 30px;
   }
 
   .xl\:mx-0 {
@@ -1100,12 +916,9 @@ body {
     margin-right: 0px;
   }
 
-  .xl\:mt-\[-60px\] {
+  .xl\:my-\[-60px\] {
     margin-top: -60px;
-  }
-
-  .xl\:mt-\[60px\] {
-    margin-top: 60px;
+    margin-bottom: -60px;
   }
 
   .xl\:mb-\[16px\] {
@@ -1132,136 +945,28 @@ body {
     display: none;
   }
 
-  .xl\:h-\[679px\] {
-    height: 679px;
+  .xl\:h-\[700px\] {
+    height: 700px;
   }
 
   .xl\:h-full {
     height: 100%;
   }
 
-  .xl\:h-auto {
-    height: auto;
-  }
-
-  .xl\:h-\[579px\] {
-    height: 579px;
-  }
-
-  .xl\:h-\[779px\] {
-    height: 779px;
-  }
-
-  .xl\:h-\[609px\] {
-    height: 609px;
-  }
-
-  .xl\:h-\[709px\] {
-    height: 709px;
-  }
-
-  .xl\:h-\[879px\] {
-    height: 879px;
-  }
-
-  .xl\:h-\[690px\] {
-    height: 690px;
-  }
-
-  .xl\:h-\[790px\] {
-    height: 790px;
-  }
-
-  .xl\:h-\[700px\] {
-    height: 700px;
-  }
-
-  .xl\:h-\[720px\] {
-    height: 720px;
-  }
-
-  .xl\:h-\[740px\] {
-    height: 740px;
-  }
-
-  .xl\:h-\[730px\] {
-    height: 730px;
-  }
-
-  .xl\:w-\[666px\] {
-    width: 666px;
-  }
-
-  .xl\:w-full {
-    width: 100%;
-  }
-
-  .xl\:w-\[766px\] {
-    width: 766px;
-  }
-
-  .xl\:w-\[866px\] {
-    width: 866px;
-  }
-
-  .xl\:w-\[966px\] {
-    width: 966px;
-  }
-
-  .xl\:w-\[846px\] {
-    width: 846px;
-  }
-
-  .xl\:w-\[826px\] {
-    width: 826px;
-  }
-
-  .xl\:w-\[516px\] {
-    width: 516px;
-  }
-
-  .xl\:w-\[616px\] {
-    width: 616px;
-  }
-
-  .xl\:w-\[600px\] {
-    width: 600px;
-  }
-
-  .xl\:w-\[590px\] {
-    width: 590px;
-  }
-
-  .xl\:w-\[580px\] {
-    width: 580px;
-  }
-
-  .xl\:w-\[570px\] {
-    width: 570px;
-  }
-
   .xl\:w-\[313px\] {
     width: 313px;
-  }
-
-  .xl\:w-\[776px\] {
-    width: 776px;
-  }
-
-  .xl\:w-\[575px\] {
-    width: 575px;
   }
 
   .xl\:w-\[572px\] {
     width: 572px;
   }
 
-  .xl\:w-\[800px\] {
-    width: 800px;
-  }
-
   .xl\:w-\[820px\] {
     width: 820px;
+  }
+
+  .xl\:w-full {
+    width: 100%;
   }
 
   .xl\:flex-row {
@@ -1272,23 +977,9 @@ body {
     flex-direction: column-reverse;
   }
 
-  .xl\:overflow-hidden {
-    overflow: hidden;
-  }
-
   .xl\:object-cover {
     -o-object-fit: cover;
        object-fit: cover;
-  }
-
-  .xl\:object-fill {
-    -o-object-fit: fill;
-       object-fit: fill;
-  }
-
-  .xl\:object-scale-down {
-    -o-object-fit: scale-down;
-       object-fit: scale-down;
   }
 
   .xl\:px-\[211px\] {
@@ -1296,19 +987,9 @@ body {
     padding-right: 211px;
   }
 
-  .xl\:py-\[20px\] {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-
-  .xl\:py-\[-20px\] {
-    padding-top: -20px;
-    padding-bottom: -20px;
-  }
-
-  .xl\:py-\[-50px\] {
-    padding-top: -50px;
-    padding-bottom: -50px;
+  .xl\:py-\[10px\] {
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 
   .xl\:py-\[30px\] {
@@ -1316,47 +997,15 @@ body {
     padding-bottom: 30px;
   }
 
-  .xl\:py-\[40px\] {
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
-
-  .xl\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-
-  .xl\:py-\[0px\] {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-
-  .xl\:py-\[10px\] {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-
-  .xl\:pt-\[30px\] {
-    padding-top: 30px;
-  }
-
-  .xl\:pb-0 {
-    padding-bottom: 0px;
-  }
-
-  .xl\:pb-\[0px\] {
-    padding-bottom: 0px;
-  }
-
   .xl\:text-left {
     text-align: left;
   }
 
-  .xl\:text-\[35px\] {
-    font-size: 35px;
-  }
-
   .xl\:text-\[22px\] {
     font-size: 22px;
+  }
+
+  .xl\:text-\[35px\] {
+    font-size: 35px;
   }
 }
