--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-urbanist: "Urbanist", sans-serif;
+  --font-figtree: "Figtree", sans-serif;
 }
 
 @theme inline {
@@ -18,6 +20,8 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --font-urbanist: "Urbanist", sans-serif;
+    --font-figtree: "Figtree", sans-serif;
   }
 }
 
@@ -25,6 +29,13 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.font-urbanist {
+  font-family: var(--font-urbanist);
+}
+.font-figtree {
+  font-family: var(--font-figtree);
 }
 
 .glow-button {
