--- a/src/app/output.css
+++ b/src/app/output.css
@@ -556,6 +556,11 @@ video {
   margin-bottom: -60px;
 }
 
+.mx-\[32\.5px\] {
+  margin-left: 32.5px;
+  margin-right: 32.5px;
+}
+
 .mb-\[22px\] {
   margin-bottom: 22px;
 }
