--- a/src/app/output.css
+++ b/src/app/output.css
@@ -546,19 +546,14 @@ video {
   z-index: -1;
 }
 
-.mx-\[34\.5px\] {
-  margin-left: 34.5px;
-  margin-right: 34.5px;
+.mx-\[32\.5px\] {
+  margin-left: 32.5px;
+  margin-right: 32.5px;
 }
 
 .my-\[-60px\] {
   margin-top: -60px;
   margin-bottom: -60px;
-}
-
-.mx-\[32\.5px\] {
-  margin-left: 32.5px;
-  margin-right: 32.5px;
 }
 
 .mb-\[22px\] {
@@ -710,6 +705,11 @@ video {
   padding-right: 20px;
 }
 
+.px-\[22px\] {
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -725,41 +725,6 @@ video {
   padding-bottom: 40px;
 }
 
-.px-\[30px\] {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.px-\[25px\] {
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
-.px-\[26px\] {
-  padding-left: 26px;
-  padding-right: 26px;
-}
-
-.px-\[27px\] {
-  padding-left: 27px;
-  padding-right: 27px;
-}
-
-.px-\[24px\] {
-  padding-left: 24px;
-  padding-right: 24px;
-}
-
-.px-\[23px\] {
-  padding-left: 23px;
-  padding-right: 23px;
-}
-
-.px-\[22px\] {
-  padding-left: 22px;
-  padding-right: 22px;
-}
-
 .pb-\[40px\] {
   padding-bottom: 40px;
 }
@@ -772,8 +737,12 @@ video {
   text-align: center;
 }
 
-.font-sans {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.font-figtree {
+  font-family: var(--font-figtree), sans-serif;
+}
+
+.font-urbanist {
+  font-family: var(--font-urbanist), sans-serif;
 }
 
 .text-\[10px\] {
@@ -866,41 +835,24 @@ video {
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --font-urbanist: "Urbanist", sans-serif;
-  --font-figtree: "Figtree", sans-serif;
 }
 
 @theme inline {
   --color-background: var(--background);
 
   --color-foreground: var(--foreground);
-
-  --font-sans: var(--font-geist-sans);
-
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
-    --font-urbanist: "Urbanist", sans-serif;
-    --font-figtree: "Figtree", sans-serif;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.font-urbanist {
-  font-family: var(--font-urbanist);
-}
-
-.font-figtree {
-  font-family: var(--font-figtree);
 }
 
 .glow-button {
@@ -922,10 +874,6 @@ body {
 
   .sm\:top-\[126px\] {
     top: 126px;
-  }
-
-  .sm\:mt-\[57px\] {
-    margin-top: 57px;
   }
 
   .sm\:h-\[679px\] {
@@ -1001,8 +949,8 @@ body {
     width: 313px;
   }
 
-  .xl\:w-\[572px\] {
-    width: 572px;
+  .xl\:w-\[560px\] {
+    width: 560px;
   }
 
   .xl\:w-\[820px\] {
@@ -1011,14 +959,6 @@ body {
 
   .xl\:w-full {
     width: 100%;
-  }
-
-  .xl\:w-\[570px\] {
-    width: 570px;
-  }
-
-  .xl\:w-\[560px\] {
-    width: 560px;
   }
 
   .xl\:flex-row {
