--- a/src/app/output.css
+++ b/src/app/output.css
@@ -434,6 +434,14 @@ video {
   display: none;
 }
 
+:root {
+  --color-primary: #FC004E;
+  --color-secondary: #10CBE0;
+  --color-semi-secondary: #00E7F9;
+  --color-gray: #ABABAB;
+  --color-semi-gray: #A9A9A9;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -828,10 +836,6 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -856,8 +860,14 @@ body {
 }
 
 .glow-button {
-  box-shadow: 0 0 15px var(--primary);
+  filter: drop-shadow(2px 2px 5px var(--color-semi-secondary));
 }
+
+.drop-shadow-pink {
+  filter: drop-shadow(0px 4px 2px var(--color-primary));
+}
+
+/* filter: "drop-shadow(2px 2px 5px #00E7F9)" */
 
 @media (min-width: 1280px) {
   .xl\:absolute {
@@ -887,10 +897,6 @@ body {
 
   .xl\:mt-\[57px\] {
     margin-top: 57px;
-  }
-
-  .xl\:block {
-    display: block;
   }
 
   .xl\:flex {
