--- a/src/app/output.css
+++ b/src/app/output.css
@@ -556,6 +556,16 @@ video {
   margin-bottom: -60px;
 }
 
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.mx-\[0px\] {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 .mb-\[22px\] {
   margin-bottom: 22px;
 }
@@ -580,6 +590,10 @@ video {
   margin-top: 35px;
 }
 
+.mt-\[-60px\] {
+  margin-top: -60px;
+}
+
 .block {
   display: block;
 }
@@ -602,6 +616,10 @@ video {
 
 .h-\[72\.25px\] {
   height: 72.25px;
+}
+
+.h-\[40px\] {
+  height: 40px;
 }
 
 .w-8 {
@@ -722,6 +740,26 @@ video {
 .py-\[40px\] {
   padding-top: 40px;
   padding-bottom: 40px;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
+.px-\[21px\] {
+  padding-left: 21px;
+  padding-right: 21px;
 }
 
 .pb-\[40px\] {
@@ -902,6 +940,10 @@ body {
     display: none;
   }
 
+  .xl\:h-\[40px\] {
+    height: 40px;
+  }
+
   .xl\:h-\[700px\] {
     height: 700px;
   }
@@ -924,6 +966,14 @@ body {
 
   .xl\:w-full {
     width: 100%;
+  }
+
+  .xl\:w-\[516px\] {
+    width: 516px;
+  }
+
+  .xl\:w-\[830px\] {
+    width: 830px;
   }
 
   .xl\:flex-row {
@@ -952,6 +1002,11 @@ body {
   .xl\:py-\[30px\] {
     padding-top: 30px;
     padding-bottom: 30px;
+  }
+
+  .xl\:px-\[0px\] {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .xl\:text-left {
