--- a/src/app/output.css
+++ b/src/app/output.css
@@ -538,12 +538,29 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .right-4 {
   right: 1rem;
 }
 
+.right-6 {
+  right: 1.5rem;
+}
+
+.right-7 {
+  right: 1.75rem;
+}
+
 .z-\[-1\] {
   z-index: -1;
+}
+
+.mx-\[0px\] {
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .mx-\[32\.5px\] {
@@ -556,14 +573,29 @@ video {
   margin-bottom: -60px;
 }
 
-.mx-0 {
-  margin-left: 0px;
-  margin-right: 0px;
+.my-\[-50px\] {
+  margin-top: -50px;
+  margin-bottom: -50px;
 }
 
-.mx-\[0px\] {
-  margin-left: 0px;
-  margin-right: 0px;
+.mx-\[1px\] {
+  margin-left: 1px;
+  margin-right: 1px;
+}
+
+.mx-\[5px\] {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.my-\[10px\] {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.my-\[-10px\] {
+  margin-top: -10px;
+  margin-bottom: -10px;
 }
 
 .mb-\[22px\] {
@@ -590,8 +622,32 @@ video {
   margin-top: 35px;
 }
 
-.mt-\[-60px\] {
-  margin-top: -60px;
+.mr-\[2px\] {
+  margin-right: 2px;
+}
+
+.mr-\[10px\] {
+  margin-right: 10px;
+}
+
+.mr-\[9px\] {
+  margin-right: 9px;
+}
+
+.mr-\[8px\] {
+  margin-right: 8px;
+}
+
+.mr-\[5px\] {
+  margin-right: 5px;
+}
+
+.mr-\[4px\] {
+  margin-right: 4px;
+}
+
+.mt-\[0px\] {
+  margin-top: 0px;
 }
 
 .block {
@@ -610,16 +666,20 @@ video {
   height: 2rem;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-\[44\.98px\] {
   height: 44.98px;
 }
 
-.h-\[72\.25px\] {
-  height: 72.25px;
+.h-\[74px\] {
+  height: 74px;
 }
 
-.h-\[40px\] {
-  height: 40px;
+.h-\[76px\] {
+  height: 76px;
 }
 
 .w-8 {
@@ -630,8 +690,8 @@ video {
   width: 105.38px;
 }
 
-.w-\[169\.27px\] {
-  width: 169.27px;
+.w-\[173\.12px\] {
+  width: 173.12px;
 }
 
 .w-full {
@@ -686,6 +746,30 @@ video {
   margin-bottom: calc(10px * var(--tw-space-y-reverse));
 }
 
+.space-y-\[8px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(8px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(8px * var(--tw-space-y-reverse));
+}
+
+.space-y-\[6px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(6px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(6px * var(--tw-space-y-reverse));
+}
+
+.space-y-\[5px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(5px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(5px * var(--tw-space-y-reverse));
+}
+
+.space-y-\[4px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(4px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(4px * var(--tw-space-y-reverse));
+}
+
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -717,6 +801,11 @@ video {
   --tw-gradient-to: var(--secondary) var(--tw-gradient-to-position);
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .px-\[20px\] {
   padding-left: 20px;
   padding-right: 20px;
@@ -725,26 +814,6 @@ video {
 .px-\[22px\] {
   padding-left: 22px;
   padding-right: 22px;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.py-\[20px\] {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.py-\[40px\] {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-1 {
@@ -757,13 +826,43 @@ video {
   padding-bottom: 0.375rem;
 }
 
-.px-\[21px\] {
-  padding-left: 21px;
-  padding-right: 21px;
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.py-\[40px\] {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.py-\[30px\] {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .pb-\[40px\] {
   padding-bottom: 40px;
+}
+
+.pt-\[10px\] {
+  padding-top: 10px;
+}
+
+.pt-\[0px\] {
+  padding-top: 0px;
+}
+
+.pt-\[-1px\] {
+  padding-top: -1px;
+}
+
+.pt-\[-2px\] {
+  padding-top: -2px;
+}
+
+.pt-\[-5px\] {
+  padding-top: -5px;
 }
 
 .text-left {
@@ -798,6 +897,10 @@ video {
   font-size: 16px;
 }
 
+.text-\[18px\] {
+  font-size: 18px;
+}
+
 .text-\[20px\] {
   font-size: 20px;
 }
@@ -809,10 +912,6 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.font-\[18px\] {
-  font-weight: 18px;
 }
 
 .font-bold {
@@ -843,11 +942,11 @@ video {
   color: var(--secondary);
 }
 
-.text-semi_gray {
+.text-semi-gray {
   color: var(--semi-gray);
 }
 
-.text-semi_secondary {
+.text-semi-secondary {
   color: var(--semi-secondary);
 }
 
@@ -907,13 +1006,209 @@ body {
     position: absolute;
   }
 
+  .xl\:bottom-\[2px\] {
+    bottom: 2px;
+  }
+
   .xl\:right-\[20px\] {
     right: 20px;
+  }
+
+  .xl\:top-\[0px\] {
+    top: 0px;
+  }
+
+  .xl\:top-\[30px\] {
+    top: 30px;
+  }
+
+  .xl\:top-\[80px\] {
+    top: 80px;
+  }
+
+  .xl\:top-\[170px\] {
+    top: 170px;
+  }
+
+  .xl\:top-\[172px\] {
+    top: 172px;
+  }
+
+  .xl\:top-\[168px\] {
+    top: 168px;
+  }
+
+  .xl\:top-\[165px\] {
+    top: 165px;
+  }
+
+  .xl\:top-\[160px\] {
+    top: 160px;
+  }
+
+  .xl\:top-\[155px\] {
+    top: 155px;
+  }
+
+  .xl\:top-\[100px\] {
+    top: 100px;
+  }
+
+  .xl\:right-\[80px\] {
+    right: 80px;
+  }
+
+  .xl\:right-\[100px\] {
+    right: 100px;
+  }
+
+  .xl\:right-\[120px\] {
+    right: 120px;
+  }
+
+  .xl\:right-\[110px\] {
+    right: 110px;
+  }
+
+  .xl\:top-\[60px\] {
+    top: 60px;
+  }
+
+  .xl\:top-\[50px\] {
+    top: 50px;
+  }
+
+  .xl\:top-\[180px\] {
+    top: 180px;
+  }
+
+  .xl\:top-\[480px\] {
+    top: 480px;
+  }
+
+  .xl\:top-\[-180px\] {
+    top: -180px;
+  }
+
+  .xl\:top-\[-80px\] {
+    top: -80px;
+  }
+
+  .xl\:top-\[-00px\] {
+    top: -00px;
+  }
+
+  .xl\:top-\[20px\] {
+    top: 20px;
+  }
+
+  .xl\:top-\[70px\] {
+    top: 70px;
+  }
+
+  .xl\:top-\[00px\] {
+    top: 00px;
+  }
+
+  .xl\:bottom-\[100px\] {
+    bottom: 100px;
+  }
+
+  .xl\:bottom-\[00px\] {
+    bottom: 00px;
+  }
+
+  .xl\:top-\[150px\] {
+    top: 150px;
+  }
+
+  .xl\:top-\[120px\] {
+    top: 120px;
   }
 
   .xl\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
+  }
+
+  .xl\:mx-\[10px\] {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .xl\:my-\[20px\] {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .xl\:my-\[-20px\] {
+    margin-top: -20px;
+    margin-bottom: -20px;
+  }
+
+  .xl\:my-\[-30px\] {
+    margin-top: -30px;
+    margin-bottom: -30px;
+  }
+
+  .xl\:my-\[-60px\] {
+    margin-top: -60px;
+    margin-bottom: -60px;
+  }
+
+  .xl\:my-\[-70px\] {
+    margin-top: -70px;
+    margin-bottom: -70px;
+  }
+
+  .xl\:my-\[-80px\] {
+    margin-top: -80px;
+    margin-bottom: -80px;
+  }
+
+  .xl\:my-\[-90px\] {
+    margin-top: -90px;
+    margin-bottom: -90px;
+  }
+
+  .xl\:my-\[-85px\] {
+    margin-top: -85px;
+    margin-bottom: -85px;
+  }
+
+  .xl\:my-\[-120px\] {
+    margin-top: -120px;
+    margin-bottom: -120px;
+  }
+
+  .xl\:my-\[-5px\] {
+    margin-top: -5px;
+    margin-bottom: -5px;
+  }
+
+  .xl\:my-\[-3px\] {
+    margin-top: -3px;
+    margin-bottom: -3px;
+  }
+
+  .xl\:my-\[-2px\] {
+    margin-top: -2px;
+    margin-bottom: -2px;
+  }
+
+  .xl\:my-\[-0px\] {
+    margin-top: -0px;
+    margin-bottom: -0px;
+  }
+
+  .xl\:mx-\[5px\] {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .xl\:my-\[0px\] {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .xl\:mb-\[16px\] {
@@ -932,6 +1227,94 @@ body {
     margin-top: 57px;
   }
 
+  .xl\:mb-\[50px\] {
+    margin-bottom: 50px;
+  }
+
+  .xl\:mb-\[-50px\] {
+    margin-bottom: -50px;
+  }
+
+  .xl\:mt-\[10px\] {
+    margin-top: 10px;
+  }
+
+  .xl\:mt-\[8px\] {
+    margin-top: 8px;
+  }
+
+  .xl\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .xl\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .xl\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .xl\:mt-\[1px\] {
+    margin-top: 1px;
+  }
+
+  .xl\:mt-\[0px\] {
+    margin-top: 0px;
+  }
+
+  .xl\:mt-\[-1px\] {
+    margin-top: -1px;
+  }
+
+  .xl\:mt-\[-5px\] {
+    margin-top: -5px;
+  }
+
+  .xl\:mb-\[17px\] {
+    margin-bottom: 17px;
+  }
+
+  .xl\:mb-\[5px\] {
+    margin-bottom: 5px;
+  }
+
+  .xl\:mb-\[1px\] {
+    margin-bottom: 1px;
+  }
+
+  .xl\:mb-\[-1px\] {
+    margin-bottom: -1px;
+  }
+
+  .xl\:mb-\[-0px\] {
+    margin-bottom: -0px;
+  }
+
+  .xl\:mb-\[-2px\] {
+    margin-bottom: -2px;
+  }
+
+  .xl\:mb-\[-3px\] {
+    margin-bottom: -3px;
+  }
+
+  .xl\:mb-\[3px\] {
+    margin-bottom: 3px;
+  }
+
+  .xl\:mb-\[6px\] {
+    margin-bottom: 6px;
+  }
+
+  .xl\:mt-\[3px\] {
+    margin-top: 3px;
+  }
+
+  .xl\:mt-\[30px\] {
+    margin-top: 30px;
+  }
+
   .xl\:flex {
     display: flex;
   }
@@ -940,8 +1323,8 @@ body {
     display: none;
   }
 
-  .xl\:h-\[40px\] {
-    height: 40px;
+  .xl\:h-\[46px\] {
+    height: 46px;
   }
 
   .xl\:h-\[700px\] {
@@ -952,20 +1335,60 @@ body {
     height: 100%;
   }
 
+  .xl\:h-\[800px\] {
+    height: 800px;
+  }
+
+  .xl\:h-\[720px\] {
+    height: 720px;
+  }
+
+  .xl\:h-\[680px\] {
+    height: 680px;
+  }
+
+  .xl\:h-\[679px\] {
+    height: 679px;
+  }
+
+  .xl\:h-\[900px\] {
+    height: 900px;
+  }
+
+  .xl\:h-\[1000px\] {
+    height: 1000px;
+  }
+
+  .xl\:h-\[950px\] {
+    height: 950px;
+  }
+
+  .xl\:h-\[920px\] {
+    height: 920px;
+  }
+
+  .xl\:h-\[660px\] {
+    height: 660px;
+  }
+
+  .xl\:h-auto {
+    height: auto;
+  }
+
+  .xl\:h-\[850px\] {
+    height: 850px;
+  }
+
+  .xl\:h-\[750px\] {
+    height: 750px;
+  }
+
+  .xl\:h-\[910px\] {
+    height: 910px;
+  }
+
   .xl\:w-\[313px\] {
     width: 313px;
-  }
-
-  .xl\:w-\[560px\] {
-    width: 560px;
-  }
-
-  .xl\:w-\[820px\] {
-    width: 820px;
-  }
-
-  .xl\:w-full {
-    width: 100%;
   }
 
   .xl\:w-\[516px\] {
@@ -976,6 +1399,82 @@ body {
     width: 830px;
   }
 
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:w-\[930px\] {
+    width: 930px;
+  }
+
+  .xl\:w-\[860px\] {
+    width: 860px;
+  }
+
+  .xl\:w-\[870px\] {
+    width: 870px;
+  }
+
+  .xl\:w-\[880px\] {
+    width: 880px;
+  }
+
+  .xl\:w-\[800px\] {
+    width: 800px;
+  }
+
+  .xl\:w-\[820px\] {
+    width: 820px;
+  }
+
+  .xl\:w-\[810px\] {
+    width: 810px;
+  }
+
+  .xl\:w-\[840px\] {
+    width: 840px;
+  }
+
+  .xl\:w-\[666px\] {
+    width: 666px;
+  }
+
+  .xl\:w-\[500\] {
+    width: 500;
+  }
+
+  .xl\:w-\[900\] {
+    width: 900;
+  }
+
+  .xl\:w-\[100\%\] {
+    width: 100%;
+  }
+
+  .xl\:w-\[900px\] {
+    width: 900px;
+  }
+
+  .xl\:w-\[1000px\] {
+    width: 1000px;
+  }
+
+  .xl\:w-\[\] {
+    width: ;
+  }
+
+  .xl\:w-\[1200px\] {
+    width: 1200px;
+  }
+
+  .xl\:w-\[1600px\] {
+    width: 1600px;
+  }
+
+  .xl\:w-\[px\] {
+    width: px;
+  }
+
   .xl\:flex-row {
     flex-direction: row;
   }
@@ -984,9 +1483,29 @@ body {
     flex-direction: column-reverse;
   }
 
+  .xl\:space-y-\[10px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(10px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(10px * var(--tw-space-y-reverse));
+  }
+
+  .xl\:overflow-hidden {
+    overflow: hidden;
+  }
+
   .xl\:object-cover {
     -o-object-fit: cover;
        object-fit: cover;
+  }
+
+  .xl\:object-fill {
+    -o-object-fit: fill;
+       object-fit: fill;
+  }
+
+  .xl\:px-\[0px\] {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .xl\:px-\[211px\] {
@@ -1004,9 +1523,9 @@ body {
     padding-bottom: 30px;
   }
 
-  .xl\:px-\[0px\] {
-    padding-left: 0px;
-    padding-right: 0px;
+  .xl\:py-\[40px\] {
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
 
   .xl\:text-left {
